--- a/templates/ideas/create_idea.html
+++ b/templates/ideas/create_idea.html
@@ -1,6 +1,12 @@
+{% extends 'common/base.html' %}
+
+{% block content %}
+
 <h2>Създай нова идея</h2>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit" class="btn btn-success">Запази</button>
 </form>
+
+{% endblock %}
