--- a/templates/ideas/edit_idea.html
+++ b/templates/ideas/edit_idea.html
@@ -1,3 +1,7 @@
+{% extends 'common/base.html' %}
+
+{% block content %}
+
 <h2>Редактирай идея</h2>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
@@ -5,3 +9,5 @@
   <button type="submit" class="btn btn-primary">Запази промените</button>
   <a href="{% url 'idea_detail' idea.pk %}" class="btn btn-secondary">Отказ</a>
 </form>
+
+{% endblock %}
