--- a/templates/ideas/idea_detail.html
+++ b/templates/ideas/idea_detail.html
@@ -1,3 +1,7 @@
+{% extends 'common/base.html' %}
+
+{% block content %}
+
 <h2>{{ idea.title }}</h2>
 <p>{{ idea.description }}</p>
 <p>Град: {{ idea.city }}</p>
@@ -33,3 +37,5 @@
   {{ form.as_p }}
   <button type="submit">Добави коментар</button>
 </form>
+
+{% endblock %}
