--- a/templates/ideas/search_results.html
+++ b/templates/ideas/search_results.html
@@ -1,3 +1,6 @@
+{% extends 'common/base.html' %}
+
+{% block content %}
 
 <h2>Резултати за: "{{ query }}"</h2>
 
@@ -10,3 +13,5 @@
 {% else %}
   <p>Няма намерени резултати.</p>
 {% endif %}
+
+{% endblock %}
