--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -4,28 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Отиди до</title>
-    <link href="{% static 'css/output.css' %}" rel="stylesheet">
+    <link rel="icon" type="image/png" href="{% static 'images/logo.png' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
 
 <nav>
     <div>
-        <a href="/">
-            <i>Отиди до</i>
+        <a href="/" class="logo-link">
+            <img src="{%static 'images/logo.png' %}" alt="OtidiDo Logo" class="logo-img">
+            <span class="logo-text">OtidiDo</span>
         </a>
         <div>
             <ul>
 
                 {% if user.is_authenticated %}
-                <li><a href="{% url 'logout' %}">Изход</a></li>
-
+                <li><span>Здравей, {{ user.username }}!</span></li>
                 <form method="POST" action="{% url 'logout' %}">
                     {% csrf_token %}
-                    <button type="submit">Logout</button>
+                    <button type="submit">Изход</button>
                 </form>
 
                 <li><a href="{% url 'profile' %}">Моят профил</a></li>
-                <li><span>Здравей, {{ user.username }}!</span></li>
+
                 {% else %}
                 <li><a href="{% url 'login' %}">Вход</a></li>
                 <li><a href="{% url 'register' %}">Регистрация</a></li>
