--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'common/base.html' %}
+
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
@@ -12,4 +13,5 @@
     </form>
 
 </body>
-</html>
+
+{% endblock %}
