--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,11 +6,15 @@
     <title>Login</title>
 </head>
 <body>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Вход</button>
-    </form>
+
+<div class="form-container">
+  <h2>Вход</h2>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn-primary">Запази</button>
+  </form>
+</div>
 
 </body>
 
