--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'common/base.html' %}
+
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Edit profile</title>
 </head>
 <body>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Запази</button>
-    </form>
+<div class="form-container">
+  <h2 class="head2">Редактирай профил</h2>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn-primary">Запази</button>
+  </form>
+</div>
+
 </body>
-</html>
+
+{% endblock %}
