--- a/templates/common/home.html
+++ b/templates/common/home.html
@@ -1,19 +1,63 @@
 {% extends 'common/base.html' %}
+{% load static %}
 
 {% block content %}
-<form method="get" action="{% url 'search' %}">
+
+<form method="get" action="{% url 'search' %}" class="search-form">
     <input type="text" name="q" placeholder="Търси преживяване..." required>
     <button type="submit">🔍</button>
 </form>
 
+<div class="callen-logo">
+    <div class="big_logo">
+    <img src="{%static 'images/logo.png' %}" alt="OtidiDo Logo">
+    <p>Добре дошли в OtidiDo. Мястото за пътешественици, които искат да споделят своя опит в приключенията. </p>
+    </div>
+<div id="calendar">
+    <h2>Календар с идеи</h2>
+</div>
+    </div>
+
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const calendarEl = document.getElementById('calendar');
+    const calendar = new window.FullCalendar.Calendar(calendarEl, {
+      initialView: 'dayGridMonth',
+      locale: 'bg',  // български език
+      events: [
+        {% for idea in all_ideas %}
+        {
+          title: '{{ idea.title }}',
+          start: '{{ idea.date_event|date:"Y-m-d" }}',
+          url: '{% url "idea_detail" idea.pk %}'
+        },
+        {% endfor %}
+      ],
+    });
+    calendar.render();
+  });
+
+</script>
+
 <h2>Най-харесвани идеи</h2>
-<ul>
-  {% for idea in top_ideas %}
-    <li>
-      <a href="{% url 'idea_detail' idea.pk %}">{{ idea.title }}</a> — {{ idea.num_likes }} ❤️
-    </li>
-  {% empty %}
-    <li>Все още няма популярни идеи.</li>
-  {% endfor %}
-</ul>
+<div class="ideas-grid">
+
+    {% for idea in top_ideas %}
+    <div class="idea-card top">
+        <a href="{% url 'idea_detail' idea.pk %}">
+            {% if idea.image %}
+            <img src="{{ idea.image.url }}" alt="Снимка на {{ idea.title }}">
+            {% else %}
+            <img src="{% static 'images/default.jpg' %}" alt="Няма изображение">
+            {% endif %}
+            <h3>{{idea.title}}</h3>
+        </a>
+        <p>{{ idea.num_likes }} ❤️</p>
+    </div>
+    {% empty %}
+    <p>Все още няма популярни идеи.</p>
+    {% endfor %}
+</div>
+
 {% endblock %}
