--- a/templates/ideas/create_idea.html
+++ b/templates/ideas/create_idea.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 
-<h2>Създай нова идея</h2>
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" class="btn btn-success">Запази</button>
-</form>
+<div class="form-container">
+  <h2>Създай нова идея</h2>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn-primary">Запази</button>
+  </form>
+</div>
+
 
 {% endblock %}
