--- a/templates/ideas/edit_idea.html
+++ b/templates/ideas/edit_idea.html
@@ -3,11 +3,13 @@
 {% block content %}
 
 <h2>Редактирай идея</h2>
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" class="btn btn-primary">Запази промените</button>
-  <a href="{% url 'idea_detail' idea.pk %}" class="btn btn-secondary">Отказ</a>
-</form>
+<div class="form-container">
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn-primary">Запази</button>
+  </form>
+</div>
+
 
 {% endblock %}
